# gqa-flash-attn-rtx3060

./: .gitignore  LICENSE  README.md  pyproject.toml
benchmark/: run.py
benchmark/results/: rtx3060_median5.json
experiments/: exp1_exp2_softmax.md  exp2_causal_skip_revert.md  exp3_split_kv_decode.md  exp4_block_m_128.md  exp5_group_packing.md
gqa_kernels/: __init__.py  dispatch.py  gqa_fwd.py  gqa_split.py
tests/: reference.py  test_correctness.py
